# compiz-plugins-experimental

images/snow/: Makefile.am
images/snow/src/: snowflake-redo-edit-2016sept04n2.ora  snowflake-redo-edit2016sept04n10.ora  snowflake-redo-edit2016sept04n11.ora  snowflake-redo-edit2016sept04n4.ora  snowflake-redo-edit2016sept04n5.ora  snowflake-redo-edit2016sept04n6.ora  snowflake-redo-edit2016sept04n7.ora  snowflake-redo-edit2016sept04n8.ora  snowflake-redo-edit2016sept04n9.ora  snowflake-redo.ora  snowflake-redoedit-2016sept04n3.ora  ~⁄snowflake-redo-edit-2016sept04.ora
metadata/: Makefile.am  animationsim.xml.in  dialog.xml.in  snow.xml.in  toggledeco.xml.in  wizard.xml.in
src/elements/: elements.c
src/snow/: snow.c
src/wizard/: wizard.c
