imagesdir = $(imagedir)/snow
images_DATA =	        \
	snow1-black.png \
	snow1-inverse.png \
	snow1.png \
	snow2-black.png \
	snow2.png \
	snowflake-black.png \
	snowflake-blurry-black.png \
	snowflake-blurry.png \
	snowflake-redo-black-mini.png \
	snowflake-redo-black.png \
	snowflake-redo-outline-inverted-mini.png \
	snowflake-redo-outline-inverted.png \
	snowflake-redo-outline-mini.png \
	snowflake-redo-outline.png \
	snowflake-redo-sharp-black-mini.png \
	snowflake-redo-sharp-black.png \
	snowflake-redo-sharp-white-mini.png \
	snowflake-redo-sharp-white.png \
	snowflake-redo-white-mini.png \
	snowflake-redo-white.png \
	snowflake-solid-black-mini.png \
	snowflake-solid-black.png \
	snowflake-solid-sharp-black-mini.png \
	snowflake-solid-sharp-black.png \
	snowflake-solid-sharp-white-mini.png \
	snowflake-solid-sharp-white.png \
	snowflake-solid-white-mini.png \
	snowflake-solid-white.png \
	snowflake.png \
	stars1-black.png \
	stars1.png

EXTRA_DIST =	        \
	snow1-black.png \
	snow1-inverse.png \
	snow1.png \
	snow2-black.png \
	snow2.png \
	snowflake-black.png \
	snowflake-blurry-black.png \
	snowflake-blurry.png \
	snowflake-redo-black-mini.png \
	snowflake-redo-black.png \
	snowflake-redo-outline-inverted-mini.png \
	snowflake-redo-outline-inverted.png \
	snowflake-redo-outline-mini.png \
	snowflake-redo-outline.png \
	snowflake-redo-sharp-black-mini.png \
	snowflake-redo-sharp-black.png \
	snowflake-redo-sharp-white-mini.png \
	snowflake-redo-sharp-white.png \
	snowflake-redo-white-mini.png \
	snowflake-redo-white.png \
	snowflake-solid-black-mini.png \
	snowflake-solid-black.png \
	snowflake-solid-sharp-black-mini.png \
	snowflake-solid-sharp-black.png \
	snowflake-solid-sharp-white-mini.png \
	snowflake-solid-sharp-white.png \
	snowflake-solid-white-mini.png \
	snowflake-solid-white.png \
	snowflake.png \
	stars1-black.png \
	stars1.png
